--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "recharts": "^3.6.0",
     "react-router-dom": "^7.10.1",
     "@react-three/fiber": "^9.4.2",
-    "three": "^0.182.0",
-    "firebase": "^12.6.0"
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
