--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
-    "react": "^19.2.3",
+    "@dataconnect/generated": "file:src/dataconnect-generated",
+    "@react-three/fiber": "^9.4.2",
+    "autoprefixer": "^10.4.23",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
-    "recharts": "^3.6.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-router-dom": "^7.10.1",
-    "@react-three/fiber": "^9.4.2",
+    "recharts": "^3.6.0",
+    "tailwindcss": "^4.1.18",
     "three": "^0.182.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
