--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Gemini API key (replace with your own)
-GEMINI_API_KEY=
+GEMINI_API_KEY=AIzaSyANYemYlCTxSpvtvDGYci-43yIos4XkaNo
 
 # Firebase config for login
 VITE_FIREBASE_API_KEY=AIzaSyBidwl6bJX_5QsuYEX3iOWaFou1-Vl2wdY
