--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ VITE_FIREBASE_STORAGE_BUCKET=login-maneeson.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=684991391502
 VITE_FIREBASE_APP_ID=1:684991391502:web:b11fe2ab627e8b21b2995f
 VITE_FIREBASE_MEASUREMENT_ID=G-XCTN7L6JQW
+
+VITE_ADMIN_EMAILS=puttipong@manee-son.com
