--- a/firebase.json
+++ b/firebase.json
@@ -6,5 +6,9 @@
   },
   "dataconnect": {
     "source": "dataconnect"
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   }
 }
