--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@dataconnect/generated": "file:src/dataconnect-generated",
     "@react-three/fiber": "^9.4.2",
     "autoprefixer": "^10.4.23",
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
     "react": "^19.2.3",
@@ -19,7 +21,8 @@
     "react-router-dom": "^7.10.1",
     "recharts": "^3.6.0",
     "tailwindcss": "^4.1.18",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
