--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "description": "Premium software development agency. Where heritage meets the algorithm.",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/6408/6408894.png",
+      "src": "/image/mobile-app.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/6408/6408894.png",
+      "src": "/image/mobile-app.png",
       "sizes": "512x512",
       "type": "image/png"
     }
