add firebase MVP#4

--- a/dataconnect/example/connector.yaml
+++ b/dataconnect/example/connector.yaml
@@ -6,3 +6,7 @@ generate:
       packageJsonDir: ../..
       react: true
       angular: false
+  adminNodeSdk:
+    - outputDir: ../../src/dataconnect-admin-generated
+      package: "@dataconnect/admin-generated"
+      packageJsonDir: ../..
